psa-cel/deny-privileged-profile/.chainsaw-test/crb.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: ns-deleter:denyprivilegeduser
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: ns-deleter
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: denyprivilegeduser
