psa-cel/deny-privileged-profile/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: deny-privileged-profile
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../deny-privileged-profile.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: deny-privileged-profile
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - script:
        content: |
          #!/bin/bash
          set -eu
          cp $KUBECONFIG temp
          export KUBECONFIG=./temp
          export USERNAME=denyprivilegeduser
          export CA=ca.crt
          #### Get CA certificate from kubeconfig assuming it's the first in the list.
          kubectl config view --raw -o jsonpath='{.clusters[0].cluster.certificate-authority-data}' | base64 --decode > ./ca.crt
          #### Set CLUSTER_SERVER from kubeconfig assuming it's the first in the list.
          CLUSTER_SERVER="$(kubectl config view --raw -o jsonpath='{.clusters[0].cluster.server}')"
          #### Set CLUSTER from kubeconfig assuming it's the first in the list.
          CLUSTER="$(kubectl config view --raw -o jsonpath='{.clusters[0].name}')"
          #### Generate private key
          openssl genrsa -out $USERNAME.key 2048
          #### Create CSR
          openssl req -new -key $USERNAME.key -out $USERNAME.csr -subj "/O=testorg/CN=$USERNAME"
          #### Send CSR to kube-apiserver for approval
          cat <<EOF | kubectl apply -f -
          apiVersion: certificates.k8s.io/v1
          kind: CertificateSigningRequest
          metadata:
            name: $USERNAME
          spec:
            request: $(cat $USERNAME.csr | base64 | tr -d '\n')
            signerName: kubernetes.io/kube-apiserver-client
            usages:
            - client auth
          EOF
          #### Approve CSR
          kubectl certificate approve $USERNAME
          #### Download certificate
          kubectl get csr $USERNAME -o jsonpath='{.status.certificate}' | base64 --decode > $USERNAME.crt
          ####
          #### Create the credential object and output the new kubeconfig file
          kubectl config set-credentials $USERNAME --client-certificate=$USERNAME.crt --client-key=$USERNAME.key --embed-certs
          #### Set the context
          kubectl config set-context $USERNAME-context --user=$USERNAME --cluster=$CLUSTER
          # Delete CSR
          kubectl delete csr $USERNAME
    - apply:
        file: cr.yaml
    - apply:
        file: crb.yaml
    - script:
        content: |
          #!/bin/bash
          set -eu
          export KUBECONFIG=./temp
          kubectl --context=denyprivilegeduser-context create -f ns-good.yaml
    - script:
        content: |
          #!/bin/bash
          set -eu
          export KUBECONFIG=./temp
          if kubectl --context=denyprivilegeduser-context create -f ns-bad.yaml; then exit 1; else exit 0; fi
    - sleep:
        duration: 10s
    finally:
    - script:
        content: kubectl delete -f ns-good.yaml --ignore-not-found
    - script:
        content: kubectl delete -f ns-bad.yaml --ignore-not-found
    - script:
        content: |
          set -e
          rm ./temp
  - name: step-05
    try:
    - apply:
        file: ns-good.yaml
    - apply:
        file: ns-bad.yaml
